# dqfy

./: README.md  pyproject.toml  requirements.txt
doqfy/: manage.py
doqfy/doqfy/: asgi.py  settings.py  urls.py  wsgi.py
doqfy/shareme/: apps.py  models.py  services.py  urls.py  views.py
doqfy/shareme/migrations/: 0001_initial.py  0002_snippet_encrypted.py  0003_snippet_salt.py  0004_alter_snippet_salt.py
doqfy/shareme/templates/: base.html  index.html  not-found.html  snippet.html
doqfy/shorten/: apps.py  models.py  services.py  urls.py  views.py
doqfy/shorten/migrations/: 0001_initial.py  0002_alter_url_long_url.py
doqfy/shorten/templates/: base.html  not-found.html  shorten.html
